tests/ui/const-generics/kind_mismatch2.stderr
error[E0747]: constant provided when a type was expected
  --> $DIR/kind_mismatch2.rs:5:14
   |
LL |     SmallVec<D>:,
   |              ^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0747`.
